Fix the typos reported by Helge Kreutzmann in the dpkg.1, dpkg-divert.8, and deb-control.5 man pages.

--- a/man/C/deb-control.5
+++ b/man/C/deb-control.5
@@ -43,7 +43,7 @@ software that was packaged.
 .BR " " "<long description>"
 .br
 The format for the package description is a short brief summary on the
-first line (after the "Description" field). The following lines can be
+first line (after the "Description" field). The following lines should be
 used as a longer, more detailed description. Each line of the long description
 must be preceded by a space, and blank lines in the long description must
 contain a single '.' following the preceding space.
@@ -65,7 +65,7 @@ and
 .B Priority
 fields have a defined set of accepted values based on the Policy Manual.
 They are used to decide how the packages are layed out in the archive.
-A list of these can be obtained from the latest version of
+A list of these values can be obtained from the latest version of the
 .B debian-policy
 package.
 .TP
@@ -82,7 +82,7 @@ for. Common architectures are `i386', `m68k', `sparc', `alpha', `powerpc'
 etc. Note that the
 .B all
 option is meant for packages that are architecture independent. Some examples
-of this are shell or Perl scripts, or documentation.
+of this are shell and Perl scripts, and documentation.
 .TP
 .BR Source: " <source name>"
 The name of the source package that this binary package came from, if
@@ -126,7 +126,7 @@ and
 fields is a list of groups of alternative packages. Each group is a list
 of packages separated by vertical bar (or `pipe') symbols, `|'. The
 groups are separated by commas. Commas are to be read as `AND', and pipes
-as `OR', with pipes binding more tightly. Each item is a package name
+as `OR', with pipes binding more tightly. Each package name is
 optionally followed by a version number specification in parentheses.
 .LP
 A version number may start with a `>>', in which case any later version
