--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,18 @@
+2006-08-02  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* C/dpkg.1: Typo fix.
+	* C/dpkg-divert.8: Likewise.
+	* C/deb-control.5: Likewise.
+	* po4a/dpkg.1/po/dpkg.1.pot: Regenerated.
+	* po4a/dpkg-divert.8/po/dpkg-divert.8.pot: Likewise.
+	* po4a/deb-control.5/po/deb-control.5.pot: Likewise.
+	* po4a/dpkg.1/po/*.po: Merge with pot file.
+	Former completed translations become 199t15f
+	* po4a/dpkg-divert.8/po/*.po: Likewise.
+	Former completed translations become 46t7f1u.
+	* po4a/deb-control.5/po/*.po: Likewise.
+	Former completed translations become 49t4f.
+
 2006-08-02  KISE Hiroshi  <kise@fuyuneko.jp>
 
 	* po4a/add_ja/deb.5.ja.add: Recode the addendum in UTF-8.
