--- a/man/po4a/deb-control.5/po/es.po
+++ b/man/po4a/deb-control.5/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-31 20:34+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
@@ -165,10 +165,10 @@ msgstr "B< >E<lt>descripción largaE<gt>"
 #, fuzzy
 msgid ""
 "The format for the package description is a short brief summary on the first "
-"line (after the \"Description\" field). The following lines can be used as a "
-"longer, more detailed description. Each line of the long description must be "
-"preceded by a space, and blank lines in the long description must contain a "
-"single '.' following the preceding space."
+"line (after the \"Description\" field). The following lines should be used "
+"as a longer, more detailed description. Each line of the long description "
+"must be preceded by a space, and blank lines in the long description must "
+"contain a single '.' following the preceding space."
 msgstr ""
 "La descripción corta del paquete debe ser de una línea (después del campo "
 "\"Description\"). La líneas siguientes se usan como descripción más "
@@ -222,8 +222,8 @@ msgstr ""
 msgid ""
 "In Debian, the B<Section> and B<Priority> fields have a defined set of "
 "accepted values based on the Policy Manual.  They are used to decide how the "
-"packages are layed out in the archive.  A list of these can be obtained from "
-"the latest version of B<debian-policy> package."
+"packages are layed out in the archive.  A list of these values can be "
+"obtained from the latest version of the B<debian-policy> package."
 msgstr ""
 "En Debian, los campos B<Section> y B<Priority> tienen definidos un conjunto "
 "reducido de valores válidos de acuerdo a las Normas de Debian (Policy "
@@ -266,7 +266,7 @@ msgid ""
 "The architecture specifies which type of hardware this package was compiled "
 "for. Common architectures are `i386', `m68k', `sparc', `alpha', `powerpc' "
 "etc. Note that the B<all> option is meant for packages that are architecture "
-"independent. Some examples of this are shell or Perl scripts, or "
+"independent. Some examples of this are shell and Perl scripts, and "
 "documentation."
 msgstr ""
 "La arquitectura para la que se compiló el paquete. Arquitecturas comunes son "
@@ -377,8 +377,8 @@ msgid ""
 "fields is a list of groups of alternative packages. Each group is a list of "
 "packages separated by vertical bar (or `pipe') symbols, `|'. The groups are "
 "separated by commas. Commas are to be read as `AND', and pipes as `OR', with "
-"pipes binding more tightly. Each item is a package name optionally followed "
-"by a version number specification in parentheses."
+"pipes binding more tightly. Each package name is optionally followed by a "
+"version number specification in parentheses."
 msgstr ""
 "La sintaxis de los campos B<Depends ,> B<Pre-Depends ,> B<Recommends> y "
 "B<Suggests> es una lista de grupos de paquetes alternativos. Cada grupo es "
