--- a/man/po4a/deb-control.5/po/ja.po
+++ b/man/po4a/deb-control.5/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-31 20:34+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -168,10 +168,10 @@ msgstr "B< >E<lt>長い説明E<gt>"
 #, fuzzy
 msgid ""
 "The format for the package description is a short brief summary on the first "
-"line (after the \"Description\" field). The following lines can be used as a "
-"longer, more detailed description. Each line of the long description must be "
-"preceded by a space, and blank lines in the long description must contain a "
-"single '.' following the preceding space."
+"line (after the \"Description\" field). The following lines should be used "
+"as a longer, more detailed description. Each line of the long description "
+"must be preceded by a space, and blank lines in the long description must "
+"contain a single '.' following the preceding space."
 msgstr ""
 "最初の行(\"Description\"フィールドタグの後)は、パッケージの説明のための 簡単"
 "な説明である。以下に続く行はより長い詳細な説明に使うことができる。 長い説明の"
@@ -224,8 +224,8 @@ msgstr ""
 msgid ""
 "In Debian, the B<Section> and B<Priority> fields have a defined set of "
 "accepted values based on the Policy Manual.  They are used to decide how the "
-"packages are layed out in the archive.  A list of these can be obtained from "
-"the latest version of B<debian-policy> package."
+"packages are layed out in the archive.  A list of these values can be "
+"obtained from the latest version of the B<debian-policy> package."
 msgstr ""
 "Debianの中では B<Section> と B<Priority> フィールドで、使える値はポリシーマ"
 "ニュアルで決められている。 これらはアーカイブでどのようにパッケージが配置され"
@@ -265,7 +265,7 @@ msgid ""
 "The architecture specifies which type of hardware this package was compiled "
 "for. Common architectures are `i386', `m68k', `sparc', `alpha', `powerpc' "
 "etc. Note that the B<all> option is meant for packages that are architecture "
-"independent. Some examples of this are shell or Perl scripts, or "
+"independent. Some examples of this are shell and Perl scripts, and "
 "documentation."
 msgstr ""
 "Architectureはこのパッケージがどのタイプのハードウェアむけにコンパイルされた "
@@ -376,8 +376,8 @@ msgid ""
 "fields is a list of groups of alternative packages. Each group is a list of "
 "packages separated by vertical bar (or `pipe') symbols, `|'. The groups are "
 "separated by commas. Commas are to be read as `AND', and pipes as `OR', with "
-"pipes binding more tightly. Each item is a package name optionally followed "
-"by a version number specification in parentheses."
+"pipes binding more tightly. Each package name is optionally followed by a "
+"version number specification in parentheses."
 msgstr ""
 "B<Depends ,> B<Pre-Depends ,> B<Recommends ,> B<Suggests> フィールドは、代替"
 "パッケージのグループのリストで表現する。 各グループではパッケージを縦棒 (もし"
