--- a/man/po4a/deb-control.5/po/ru.po
+++ b/man/po4a/deb-control.5/po/ru.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-31 20:34+0200\n"
 "PO-Revision-Date: 2006-04-08 15:06+0300\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
@@ -161,10 +161,10 @@ msgstr "B< >E<lt>длинное описаниеE<gt>"
 #, fuzzy
 msgid ""
 "The format for the package description is a short brief summary on the first "
-"line (after the \"Description\" field). The following lines can be used as a "
-"longer, more detailed description. Each line of the long description must be "
-"preceded by a space, and blank lines in the long description must contain a "
-"single '.' following the preceding space."
+"line (after the \"Description\" field). The following lines should be used "
+"as a longer, more detailed description. Each line of the long description "
+"must be preceded by a space, and blank lines in the long description must "
+"contain a single '.' following the preceding space."
 msgstr ""
 "Формат описания пакета -- это краткое и ёмкое описание в первой строке "
 "(после поля \"Description\"). Последующие строки могут быть использованы как "
@@ -213,11 +213,12 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-control.5:71
+#, fuzzy
 msgid ""
 "In Debian, the B<Section> and B<Priority> fields have a defined set of "
 "accepted values based on the Policy Manual.  They are used to decide how the "
-"packages are layed out in the archive.  A list of these can be obtained from "
-"the latest version of B<debian-policy> package."
+"packages are layed out in the archive.  A list of these values can be "
+"obtained from the latest version of the B<debian-policy> package."
 msgstr ""
 "Поля B<Section> и B<Priority> могут принимать только значения из списка, "
 "который определен в политике Debian. Они используются для того, чтобы "
@@ -251,11 +252,12 @@ msgstr "B<Architecture:> E<lt>архитектура|allE<gt>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-control.5:86
+#, fuzzy
 msgid ""
 "The architecture specifies which type of hardware this package was compiled "
 "for. Common architectures are `i386', `m68k', `sparc', `alpha', `powerpc' "
 "etc. Note that the B<all> option is meant for packages that are architecture "
-"independent. Some examples of this are shell or Perl scripts, or "
+"independent. Some examples of this are shell and Perl scripts, and "
 "documentation."
 msgstr ""
 "Архитектура определяет, для какого типа аппаратной платформы был "
@@ -355,13 +357,14 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-control.5:131
+#, fuzzy
 msgid ""
 "The syntax of B<Depends>, B<Pre-Depends>, B<Recommends> and B<Suggests> "
 "fields is a list of groups of alternative packages. Each group is a list of "
 "packages separated by vertical bar (or `pipe') symbols, `|'. The groups are "
 "separated by commas. Commas are to be read as `AND', and pipes as `OR', with "
-"pipes binding more tightly. Each item is a package name optionally followed "
-"by a version number specification in parentheses."
+"pipes binding more tightly. Each package name is optionally followed by a "
+"version number specification in parentheses."
 msgstr ""
 "Синтаксис полей B<Depends>, B<Pre-Depends>, B<Recommends> и B<Suggests> "
 "позволяет описать группу альтернативных пакетов. Каждая такая группа -- это "
