--- a/man/po4a/dpkg.1/po/dpkg.1.pot
+++ b/man/po4a/dpkg.1/po/dpkg.1.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-08-02 22:21+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -95,14 +95,14 @@ msgid ""
 "primary and more user-friendly front-end for B<dpkg> is "
 "B<dselect>(1). B<dpkg> itself is controlled entirely via command line "
 "parameters, which consist of exactly one action and zero or more "
-"options. The action-parameter tells dpkg what to do and options control the "
-"behavior of the action in some way."
+"options. The action-parameter tells B<dpkg> what to do and options control "
+"the behavior of the action in some way."
 msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:31
 msgid ""
-"B<dpkg> can be also be used as a front-end to B<dpkg-deb>.  The following "
+"B<dpkg> can be also be used as a front-end to B<dpkg-deb>(1).  The following "
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
@@ -575,7 +575,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:219
-msgid "Print architecture of packages dpkg installs (for example, \"i386\")."
+msgid "Print architecture of packages B<dpkg> installs (for example, \"i386\")."
 msgstr ""
 
 # type: TP
@@ -669,7 +669,7 @@ msgstr ""
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:250
 #, no-wrap
-msgid "B<dpkg-deb-actions>"
+msgid "B<dpkg-deb actions>"
 msgstr ""
 
 # type: Plain text
@@ -704,7 +704,7 @@ msgstr ""
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:275
 #, no-wrap
-msgid "B<dpkg-query-actions>"
+msgid "B<dpkg-query actions>"
 msgstr ""
 
 # type: Plain text
@@ -752,7 +752,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:302
-msgid "Change after how many errors dpkg will abort. The default is 50."
+msgid "Change after how many errors B<dpkg> will abort. The default is 50."
 msgstr ""
 
 # type: TP
@@ -779,7 +779,7 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:314
 msgid ""
-"Set debugging on. I<octal> is formed by bitwise-orring desired values "
+"Switch debugging on. I<octal> is formed by bitwise-orring desired values "
 "together from the list below (note that these values may change in future "
 "releases). B<-Dh> or B<--debug=help> display these debugging values."
 msgstr ""
@@ -826,7 +826,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:340
-msgid "B<all>: Turns on(or off) all force options."
+msgid "B<all>: Turns on (or off) all force options."
 msgstr ""
 
 # type: Plain text
@@ -1043,7 +1043,7 @@ msgstr ""
 #: ../../../man/po4a/../C/dpkg.1:452
 msgid ""
 "Don't install a package if a newer version of the same package is already "
-"installed. This is an alias of B<--refuse-downgrade.>"
+"installed. This is an alias of B<--refuse-downgrade>."
 msgstr ""
 
 # type: TP
@@ -1059,7 +1059,7 @@ msgid ""
 "contains many files that give information about status of installed or "
 "uninstalled packages, etc. B<instdir> defaults to I</> and refers to the "
 "directory where packages are to be installed. B<instdir> is also the "
-"directory passed to B<chroot>(2) before running I<package>'s installation "
+"directory passed to B<chroot>(2) before running package's installation "
 "scripts, which means that the scripts see B<instdir> as a root directory.  "
 "Changing B<root> changes B<instdir> to I<dir> and B<admindir> to "
 "I<dir>B</var/lib/dpkg>."
@@ -1104,10 +1104,10 @@ msgstr ""
 msgid ""
 "Send package status info to file descriptor I<E<lt>nE<gt>>. This can be "
 "given multiple times. Status updates are of the form `status: E<lt>pkgE<gt>: "
-"E<lt>pkg qstateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: "
-"error: extend-error-message'.  Configuration file conflicts are reported as "
+"E<lt>pkg stateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: error: "
+"extend-error-message'.  Configuration file conflicts are reported as "
 "`status: conffile-prompt: conffile : 'current-conffile' 'new-conffile' "
-"useredited distedited'"
+"useredited distedited'."
 msgstr ""
 
 # type: TP
@@ -1127,7 +1127,7 @@ msgid ""
 "E<lt>installed-versionE<gt> E<lt>available-versionE<gt>' for actions where "
 "I<E<lt>actionE<gt>> is one of install, upgrade, remove, purge; and "
 "`YYYY-MM-DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for "
-"conffile changes where I<E<lt>decision> is either install or keep."
+"conffile changes where I<E<lt>decisionE<gt>> is either install or keep."
 msgstr ""
 
 # type: TP
@@ -1271,7 +1271,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:540
-msgid "The program B<dpkg> will execute while starting a new shell."
+msgid "The program B<dpkg> will execute when starting a new shell."
 msgstr ""
 
 # type: TP
@@ -1295,7 +1295,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:547
-msgid "To list packages related to the editor vi:"
+msgid "To list packages related to the editor B<vi>(1):"
 msgstr ""
 
 # type: Plain text
@@ -1306,7 +1306,7 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:552
-msgid "To see the entries in I</var/lib/dpkg/available> on two packages:"
+msgid "To see the entries in I</var/lib/dpkg/available> of two packages:"
 msgstr ""
 
 # type: Plain text
@@ -1439,6 +1439,6 @@ msgstr ""
 #: ../../../man/po4a/../C/dpkg.1:616
 #, no-wrap
 msgid ""
-"See I</usr/share/doc/dpkg/THANKS.gz> for the list of people who have\n"
-"contributed to B<dpkg> .\n"
+"See I</usr/share/doc/dpkg/THANKS> for the list of people who have\n"
+"contributed to B<dpkg>.\n"
 msgstr ""
