--- a/man/po4a/dpkg.1/po/ja.po
+++ b/man/po4a/dpkg.1/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-08-02 22:21+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -111,8 +111,8 @@ msgid ""
 "primary and more user-friendly front-end for B<dpkg> is B<dselect>(1). "
 "B<dpkg> itself is controlled entirely via command line parameters, which "
 "consist of exactly one action and zero or more options. The action-parameter "
-"tells dpkg what to do and options control the behavior of the action in some "
-"way."
+"tells B<dpkg> what to do and options control the behavior of the action in "
+"some way."
 msgstr ""
 "B<dpkg> は、Debian パッケージの、インストール、構築、 削除、管理をするための"
 "ツールである。 B<dselect>(8) は、B<dpkg> の代表的なフロントエンドで、 より"
@@ -125,7 +125,7 @@ msgstr ""
 #: ../../../man/po4a/../C/dpkg.1:31
 #, fuzzy
 msgid ""
-"B<dpkg> can be also be used as a front-end to B<dpkg-deb>.  The following "
+"B<dpkg> can be also be used as a front-end to B<dpkg-deb>(1).  The following "
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
@@ -706,7 +706,8 @@ msgstr "B<dpkg --print-architecture>"
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:219
 #, fuzzy
-msgid "Print architecture of packages dpkg installs (for example, \"i386\")."
+msgid ""
+"Print architecture of packages B<dpkg> installs (for example, \"i386\")."
 msgstr ""
 "ターゲットアーキテクチャ(例えば、“i386”)を表示する。このオプションは "
 "B<gcc> を使用する。"
@@ -819,7 +820,7 @@ msgstr "B<dpkg> のバージョン情報を表示する。"
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:250
 #, fuzzy, no-wrap
-msgid "B<dpkg-deb-actions>"
+msgid "B<dpkg-deb actions>"
 msgstr "B<dpkg-deb-actions>"
 
 # type: Plain text
@@ -871,7 +872,7 @@ msgstr ""
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:275
 #, fuzzy, no-wrap
-msgid "B<dpkg-query-actions>"
+msgid "B<dpkg-query actions>"
 msgstr "B<dpkg-query-actions>"
 
 # type: Plain text
@@ -935,7 +936,7 @@ msgstr "B<--abort-after=>I<number>"
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:302
 #, fuzzy
-msgid "Change after how many errors dpkg will abort. The default is 50."
+msgid "Change after how many errors B<dpkg> will abort. The default is 50."
 msgstr "dpkg の処理を中断させるエラー数を変更する。デフォルトは 50 である。"
 
 # type: TP
@@ -967,7 +968,7 @@ msgstr "B<-D>I<octal>B< | --debug=>I<octal>"
 #: ../../../man/po4a/../C/dpkg.1:314
 #, fuzzy
 msgid ""
-"Set debugging on. I<octal> is formed by bitwise-orring desired values "
+"Switch debugging on. I<octal> is formed by bitwise-orring desired values "
 "together from the list below (note that these values may change in future "
 "releases). B<-Dh> or B<--debug=help> display these debugging values."
 msgstr ""
@@ -1039,7 +1040,7 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:340
 #, fuzzy
-msgid "B<all>: Turns on(or off) all force options."
+msgid "B<all>: Turns on (or off) all force options."
 msgstr "B<all>: 全ての強制オプションを指定する(noならば指定しない)。"
 
 # type: Plain text
@@ -1343,7 +1344,7 @@ msgstr "B<-G>"
 #, fuzzy
 msgid ""
 "Don't install a package if a newer version of the same package is already "
-"installed. This is an alias of B<--refuse-downgrade.>"
+"installed. This is an alias of B<--refuse-downgrade>."
 msgstr ""
 "インストール済みのパッケージのほうがバージョンが新しければ、インストール しな"
 "い。これは B<--refuse-downgrade> の別名である。"
@@ -1362,7 +1363,7 @@ msgid ""
 "contains many files that give information about status of installed or "
 "uninstalled packages, etc. B<instdir> defaults to I</> and refers to the "
 "directory where packages are to be installed. B<instdir> is also the "
-"directory passed to B<chroot>(2) before running I<package>'s installation "
+"directory passed to B<chroot>(2) before running package's installation "
 "scripts, which means that the scripts see B<instdir> as a root directory.  "
 "Changing B<root> changes B<instdir> to I<dir> and B<admindir> to I<dir>B</"
 "var/lib/dpkg>."
@@ -1424,10 +1425,10 @@ msgstr "B<--status-fd >I<E<lt>nE<gt>>"
 msgid ""
 "Send package status info to file descriptor I<E<lt>nE<gt>>. This can be "
 "given multiple times. Status updates are of the form `status: E<lt>pkgE<gt>: "
-"E<lt>pkg qstateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: "
-"error: extend-error-message'.  Configuration file conflicts are reported as "
+"E<lt>pkg stateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: error: "
+"extend-error-message'.  Configuration file conflicts are reported as "
 "`status: conffile-prompt: conffile : 'current-conffile' 'new-conffile' "
-"useredited distedited'"
+"useredited distedited'."
 msgstr ""
 "ファイル記述子 I<E<lt>nE<gt>>にパッケージ状態の情報を送る。これは複数与えるこ"
 "とが できる。状態の情報は `status: E<lt>pkgE<gt>: E<lt>pkg qstateE<gt>'の形式"
@@ -1450,7 +1451,7 @@ msgid ""
 "versionE<gt> E<lt>available-versionE<gt>' for actions where "
 "I<E<lt>actionE<gt>> is one of install, upgrade, remove, purge; and `YYYY-MM-"
 "DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
-"changes where I<E<lt>decision> is either install or keep."
+"changes where I<E<lt>decisionE<gt>> is either install or keep."
 msgstr ""
 
 # type: TP
@@ -1611,7 +1612,7 @@ msgstr "B<SHELL>"
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:540
 #, fuzzy
-msgid "The program B<dpkg> will execute while starting a new shell."
+msgid "The program B<dpkg> will execute when starting a new shell."
 msgstr "B<dpkg> が新しいシェルを起動するときに、実際に起動するプログラム。"
 
 # type: TP
@@ -1639,7 +1640,7 @@ msgstr "例"
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:547
 #, fuzzy
-msgid "To list packages related to the editor vi:"
+msgid "To list packages related to the editor B<vi>(1):"
 msgstr "vi エディタに関連のあるパッケージの一覧を表示する。"
 
 # type: Plain text
@@ -1651,7 +1652,7 @@ msgstr "B< dpkg -l '*vi*'>"
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:552
 #, fuzzy
-msgid "To see the entries in I</var/lib/dpkg/available> on two packages:"
+msgid "To see the entries in I</var/lib/dpkg/available> of two packages:"
 msgstr "2 つのパッケージの I</var/lib/dpkg/available> にある項目を表示する。"
 
 # type: Plain text
@@ -1803,8 +1804,8 @@ msgstr "著者"
 #: ../../../man/po4a/../C/dpkg.1:616
 #, fuzzy, no-wrap
 msgid ""
-"See I</usr/share/doc/dpkg/THANKS.gz> for the list of people who have\n"
-"contributed to B<dpkg> .\n"
+"See I</usr/share/doc/dpkg/THANKS> for the list of people who have\n"
+"contributed to B<dpkg>.\n"
 msgstr ""
 "B<dpkg>に貢献した人のリストは B</usr/share/doc/dpkg/THANKS.gz>に\n"
 "挙げてある。\n"
