--- a/man/po4a/dpkg.1/po/pt_BR.po
+++ b/man/po4a/dpkg.1/po/pt_BR.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-08-02 22:21+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
@@ -108,8 +108,8 @@ msgid ""
 "primary and more user-friendly front-end for B<dpkg> is B<dselect>(1). "
 "B<dpkg> itself is controlled entirely via command line parameters, which "
 "consist of exactly one action and zero or more options. The action-parameter "
-"tells dpkg what to do and options control the behavior of the action in some "
-"way."
+"tells B<dpkg> what to do and options control the behavior of the action in "
+"some way."
 msgstr ""
 "B<dpkg> é uma ferramenta de nível médio para instalar, criar, remover e "
 "gerenciar pacotes Debian. O front-end primário e mais amigável para o "
@@ -122,7 +122,7 @@ msgstr ""
 #: ../../../man/po4a/../C/dpkg.1:31
 #, fuzzy
 msgid ""
-"B<dpkg> can be also be used as a front-end to B<dpkg-deb>.  The following "
+"B<dpkg> can be also be used as a front-end to B<dpkg-deb>(1).  The following "
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
@@ -695,7 +695,8 @@ msgstr "B<dpkg --print-architecture>"
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:219
 #, fuzzy
-msgid "Print architecture of packages dpkg installs (for example, \"i386\")."
+msgid ""
+"Print architecture of packages B<dpkg> installs (for example, \"i386\")."
 msgstr ""
 "Mostra a arquitetura alvo (por exemplo, \"i386\").  Essa opção usa o B<gcc>."
 
@@ -805,8 +806,8 @@ msgstr "Exibe informação sobre a versão do B<dpkg>."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:250
-#, no-wrap
-msgid "B<dpkg-deb-actions>"
+#, fuzzy, no-wrap
+msgid "B<dpkg-deb actions>"
 msgstr "B<dpkg-deb-actions>"
 
 # type: Plain text
@@ -857,8 +858,8 @@ msgstr ""
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:275
-#, no-wrap
-msgid "B<dpkg-query-actions>"
+#, fuzzy, no-wrap
+msgid "B<dpkg-query actions>"
 msgstr "B<dpkg-query-actions>"
 
 # type: Plain text
@@ -919,7 +920,8 @@ msgstr "B<--abort-after=>I<número>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:302
-msgid "Change after how many errors dpkg will abort. The default is 50."
+#, fuzzy
+msgid "Change after how many errors B<dpkg> will abort. The default is 50."
 msgstr "Altera o número de erros após os quais o dpkg abortará. O padrão é 50."
 
 # type: TP
@@ -951,7 +953,7 @@ msgstr "B<-D>I<octal>B< | --debug=>I<octal>"
 #: ../../../man/po4a/../C/dpkg.1:314
 #, fuzzy
 msgid ""
-"Set debugging on. I<octal> is formed by bitwise-orring desired values "
+"Switch debugging on. I<octal> is formed by bitwise-orring desired values "
 "together from the list below (note that these values may change in future "
 "releases). B<-Dh> or B<--debug=help> display these debugging values."
 msgstr ""
@@ -1022,7 +1024,8 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:340
-msgid "B<all>: Turns on(or off) all force options."
+#, fuzzy
+msgid "B<all>: Turns on (or off) all force options."
 msgstr "B<all>: Liga (ou desliga) todas as opções de força."
 
 # type: Plain text
@@ -1307,7 +1310,7 @@ msgstr "B<-G>"
 #, fuzzy
 msgid ""
 "Don't install a package if a newer version of the same package is already "
-"installed. This is an alias of B<--refuse-downgrade.>"
+"installed. This is an alias of B<--refuse-downgrade>."
 msgstr ""
 "Não instala um pacote se uma nova versão do mesmo pacote já estiver "
 "instalada. Isso é um apelido de B<--refuse-downgrade.>"
@@ -1326,7 +1329,7 @@ msgid ""
 "contains many files that give information about status of installed or "
 "uninstalled packages, etc. B<instdir> defaults to I</> and refers to the "
 "directory where packages are to be installed. B<instdir> is also the "
-"directory passed to B<chroot>(2) before running I<package>'s installation "
+"directory passed to B<chroot>(2) before running package's installation "
 "scripts, which means that the scripts see B<instdir> as a root directory.  "
 "Changing B<root> changes B<instdir> to I<dir> and B<admindir> to I<dir>B</"
 "var/lib/dpkg>."
@@ -1386,10 +1389,10 @@ msgstr "B<--status-fd >I<E<lt>nE<gt>>"
 msgid ""
 "Send package status info to file descriptor I<E<lt>nE<gt>>. This can be "
 "given multiple times. Status updates are of the form `status: E<lt>pkgE<gt>: "
-"E<lt>pkg qstateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: "
-"error: extend-error-message'.  Configuration file conflicts are reported as "
+"E<lt>pkg stateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: error: "
+"extend-error-message'.  Configuration file conflicts are reported as "
 "`status: conffile-prompt: conffile : 'current-conffile' 'new-conffile' "
-"useredited distedited'"
+"useredited distedited'."
 msgstr ""
 "Envia a informação do estado do pacote para o descritor de arquivo "
 "I<E<lt>nE<gt>>.  Isso pode ser dado múltiplas vezes. As atualizações de "
@@ -1412,7 +1415,7 @@ msgid ""
 "versionE<gt> E<lt>available-versionE<gt>' for actions where "
 "I<E<lt>actionE<gt>> is one of install, upgrade, remove, purge; and `YYYY-MM-"
 "DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
-"changes where I<E<lt>decision> is either install or keep."
+"changes where I<E<lt>decisionE<gt>> is either install or keep."
 msgstr ""
 
 # type: TP
@@ -1569,7 +1572,8 @@ msgstr "B<SHELL>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:540
-msgid "The program B<dpkg> will execute while starting a new shell."
+#, fuzzy
+msgid "The program B<dpkg> will execute when starting a new shell."
 msgstr ""
 "O programa que o B<dpkg> executará quando estiver iniciando um novo shell."
 
@@ -1598,7 +1602,7 @@ msgstr "EXEMPLOS"
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:547
 #, fuzzy
-msgid "To list packages related to the editor vi:"
+msgid "To list packages related to the editor B<vi>(1):"
 msgstr "Para listar os pacotes relacionados com o editor vi:"
 
 # type: Plain text
@@ -1610,7 +1614,7 @@ msgstr "B< dpkg -l '*vi*'>"
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:552
 #, fuzzy
-msgid "To see the entries in I</var/lib/dpkg/available> on two packages:"
+msgid "To see the entries in I</var/lib/dpkg/available> of two packages:"
 msgstr "Para ver as entradas em I</var/lib/dpkg/available> em dois pacotes:"
 
 # type: Plain text
@@ -1757,13 +1761,13 @@ msgstr "AUTORES"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:616
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
-"See I</usr/share/doc/dpkg/THANKS.gz> for the list of people who have\n"
-"contributed to B<dpkg> .\n"
+"See I</usr/share/doc/dpkg/THANKS> for the list of people who have\n"
+"contributed to B<dpkg>.\n"
 msgstr ""
 "Veja B</usr/share/doc/dpkg/THANKS> para a lista de pessoas que\n"
-"contribuíram para o B<dpkg> .\n"
+"contribuíram para o B<dpkg>.\n"
 
 # type: TP
 #~ msgid "B<DPKG_OLD_CONFFILE>"
