--- a/man/po4a/dpkg.1/po/sv.po
+++ b/man/po4a/dpkg.1/po/sv.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-08-02 22:21+0200\n"
 "PO-Revision-Date: 2006-06-11 20:52+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
@@ -95,13 +95,14 @@ msgstr "BESKRIVNING"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:26
+#, fuzzy
 msgid ""
 "B<dpkg> is a tool to install, build, remove and manage Debian packages. The "
 "primary and more user-friendly front-end for B<dpkg> is B<dselect>(1). "
 "B<dpkg> itself is controlled entirely via command line parameters, which "
 "consist of exactly one action and zero or more options. The action-parameter "
-"tells dpkg what to do and options control the behavior of the action in some "
-"way."
+"tells B<dpkg> what to do and options control the behavior of the action in "
+"some way."
 msgstr ""
 "B<dpkg> är ett mellannivåverktyg för att installera, bygga, ta bort och "
 "hantera Debianpaket. Det primära och mer användarvänliga skalet runt B<dpkg> "
@@ -112,8 +113,9 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:31
+#, fuzzy
 msgid ""
-"B<dpkg> can be also be used as a front-end to B<dpkg-deb>.  The following "
+"B<dpkg> can be also be used as a front-end to B<dpkg-deb>(1).  The following "
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
@@ -663,7 +665,9 @@ msgstr "B<dpkg --print-architecture>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:219
-msgid "Print architecture of packages dpkg installs (for example, \"i386\")."
+#, fuzzy
+msgid ""
+"Print architecture of packages B<dpkg> installs (for example, \"i386\")."
 msgstr ""
 "Skriv ut arkitekturen för paket dpkg installerar (till exempel \"i386\")."
 
@@ -768,8 +772,8 @@ msgstr "Visar B<dpkg>s versionsinformation."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:250
-#, no-wrap
-msgid "B<dpkg-deb-actions>"
+#, fuzzy, no-wrap
+msgid "B<dpkg-deb actions>"
 msgstr "B<dpkg-deb-åtgärder>"
 
 # type: Plain text
@@ -819,8 +823,8 @@ msgstr ""
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:275
-#, no-wrap
-msgid "B<dpkg-query-actions>"
+#, fuzzy, no-wrap
+msgid "B<dpkg-query actions>"
 msgstr "B<dpkg-query-åtgärder>"
 
 # type: Plain text
@@ -881,7 +885,8 @@ msgstr "B<--abort-after=>I<antal>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:302
-msgid "Change after how many errors dpkg will abort. The default is 50."
+#, fuzzy
+msgid "Change after how many errors B<dpkg> will abort. The default is 50."
 msgstr "Ställer in efter hur många fel dpkg skall avbryta. Förvalet är 50."
 
 # type: TP
@@ -910,8 +915,9 @@ msgstr "B<-D>I<oktalvärde>B< | --debug=>I<oktalvärde>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:314
+#, fuzzy
 msgid ""
-"Set debugging on. I<octal> is formed by bitwise-orring desired values "
+"Switch debugging on. I<octal> is formed by bitwise-orring desired values "
 "together from the list below (note that these values may change in future "
 "releases). B<-Dh> or B<--debug=help> display these debugging values."
 msgstr ""
@@ -980,7 +986,8 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:340
-msgid "B<all>: Turns on(or off) all force options."
+#, fuzzy
+msgid "B<all>: Turns on (or off) all force options."
 msgstr "B<all>: Slår på (eller av) alla tvingande parametrar."
 
 # type: Plain text
@@ -1252,9 +1259,10 @@ msgstr "B<-G>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:452
+#, fuzzy
 msgid ""
 "Don't install a package if a newer version of the same package is already "
-"installed. This is an alias of B<--refuse-downgrade.>"
+"installed. This is an alias of B<--refuse-downgrade>."
 msgstr ""
 "Installera inte paketet om en nyare version av samma paket redan är "
 "installerat. Detta är ett alias för B<--refuse-downgrade.>"
@@ -1267,12 +1275,13 @@ msgstr "B<--root=>I<kat> | B<--admindir=>I<kat> | B<--instdir=>I<kat>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:463
+#, fuzzy
 msgid ""
 "Change default directories. B<admindir> defaults to I</var/lib/dpkg> and "
 "contains many files that give information about status of installed or "
 "uninstalled packages, etc. B<instdir> defaults to I</> and refers to the "
 "directory where packages are to be installed. B<instdir> is also the "
-"directory passed to B<chroot>(2) before running I<package>'s installation "
+"directory passed to B<chroot>(2) before running package's installation "
 "scripts, which means that the scripts see B<instdir> as a root directory.  "
 "Changing B<root> changes B<instdir> to I<dir> and B<admindir> to I<dir>B</"
 "var/lib/dpkg>."
@@ -1325,13 +1334,14 @@ msgstr "B<--status-fd >I<E<lt>nE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:480
+#, fuzzy
 msgid ""
 "Send package status info to file descriptor I<E<lt>nE<gt>>. This can be "
 "given multiple times. Status updates are of the form `status: E<lt>pkgE<gt>: "
-"E<lt>pkg qstateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: "
-"error: extend-error-message'.  Configuration file conflicts are reported as "
+"E<lt>pkg stateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: error: "
+"extend-error-message'.  Configuration file conflicts are reported as "
 "`status: conffile-prompt: conffile : 'current-conffile' 'new-conffile' "
-"useredited distedited'"
+"useredited distedited'."
 msgstr ""
 "Sänder paketstatusinformation till filhandtag I<E<lt>nE<gt>>. Denna flagga "
 "kan ges flera gånger. Statusuppdateringar ges på formen \"status: "
@@ -1348,6 +1358,7 @@ msgstr "B<--log=>I<filename>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:492
+#, fuzzy
 msgid ""
 "Log status change updates and actions to I<filename>, instead of the default "
 "I</var/log/dpkg.log>. If this option is given multiple times, the last "
@@ -1357,7 +1368,7 @@ msgid ""
 "versionE<gt> E<lt>available-versionE<gt>' for actions where "
 "I<E<lt>actionE<gt>> is one of install, upgrade, remove, purge; and `YYYY-MM-"
 "DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
-"changes where I<E<lt>decision> is either install or keep."
+"changes where I<E<lt>decisionE<gt>> is either install or keep."
 msgstr ""
 "Logga statusändringsmeddelanden och kommandon på I<filnamn>, istället för "
 "förvalet I</var/log/dpkg.log>. Om denna flagga ges flera gånger används det "
@@ -1519,7 +1530,8 @@ msgstr "B<SHELL>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:540
-msgid "The program B<dpkg> will execute while starting a new shell."
+#, fuzzy
+msgid "The program B<dpkg> will execute when starting a new shell."
 msgstr "Programmet B<dpkg> kommer att exekvera när ett nytt skal startas."
 
 # type: TP
@@ -1545,7 +1557,8 @@ msgstr "EXEMPEL"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:547
-msgid "To list packages related to the editor vi:"
+#, fuzzy
+msgid "To list packages related to the editor B<vi>(1):"
 msgstr "För att lista paket relaterade till textredigeringsprogrammet vi:"
 
 # type: Plain text
@@ -1556,7 +1569,8 @@ msgstr "     B<dpkg -l \\(aq*vi*\\(aq>\n"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:552
-msgid "To see the entries in I</var/lib/dpkg/available> on two packages:"
+#, fuzzy
+msgid "To see the entries in I</var/lib/dpkg/available> of two packages:"
 msgstr "För att se posterna i I</var/lib/dpkg/available> för två paket:"
 
 # type: Plain text
@@ -1709,10 +1723,10 @@ msgstr "FÖRFATTARE"
 #: ../../../man/po4a/../C/dpkg.1:616
 #, no-wrap
 msgid ""
-"See I</usr/share/doc/dpkg/THANKS.gz> for the list of people who have\n"
-"contributed to B<dpkg> .\n"
+"See I</usr/share/doc/dpkg/THANKS> for the list of people who have\n"
+"contributed to B<dpkg>.\n"
 msgstr ""
-"Se filen B</usr/share/doc/dpkg/THANKS.gz> för en lista över personer som\n"
+"Se filen B</usr/share/doc/dpkg/THANKS> för en lista över personer som\n"
 "bidragit till B<dpkg> .\n"
 
 # type: TP
