--- a/man/po4a/deb-control.5/po/deb-control.5.pot
+++ b/man/po4a/deb-control.5/po/deb-control.5.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-31 20:34+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -142,10 +142,10 @@ msgstr ""
 #: ../../../man/po4a/../C/deb-control.5:50
 msgid ""
 "The format for the package description is a short brief summary on the first "
-"line (after the \"Description\" field). The following lines can be used as a "
-"longer, more detailed description. Each line of the long description must be "
-"preceded by a space, and blank lines in the long description must contain a "
-"single '.' following the preceding space."
+"line (after the \"Description\" field). The following lines should be used "
+"as a longer, more detailed description. Each line of the long description "
+"must be preceded by a space, and blank lines in the long description must "
+"contain a single '.' following the preceding space."
 msgstr ""
 
 # type: SH
@@ -186,8 +186,8 @@ msgstr ""
 msgid ""
 "In Debian, the B<Section> and B<Priority> fields have a defined set of "
 "accepted values based on the Policy Manual.  They are used to decide how the "
-"packages are layed out in the archive.  A list of these can be obtained from "
-"the latest version of B<debian-policy> package."
+"packages are layed out in the archive.  A list of these values can be "
+"obtained from the latest version of the B<debian-policy> package."
 msgstr ""
 
 # type: TP
@@ -217,7 +217,7 @@ msgid ""
 "The architecture specifies which type of hardware this package was compiled "
 "for. Common architectures are `i386', `m68k', `sparc', `alpha', `powerpc' "
 "etc. Note that the B<all> option is meant for packages that are architecture "
-"independent. Some examples of this are shell or Perl scripts, or "
+"independent. Some examples of this are shell and Perl scripts, and "
 "documentation."
 msgstr ""
 
@@ -300,8 +300,8 @@ msgid ""
 "fields is a list of groups of alternative packages. Each group is a list of "
 "packages separated by vertical bar (or `pipe') symbols, `|'. The groups are "
 "separated by commas. Commas are to be read as `AND', and pipes as `OR', with "
-"pipes binding more tightly. Each item is a package name optionally followed "
-"by a version number specification in parentheses."
+"pipes binding more tightly. Each package name is optionally followed by a "
+"version number specification in parentheses."
 msgstr ""
 
 # type: Plain text
