--- a/man/po4a/deb-control.5/po/sv.po
+++ b/man/po4a/deb-control.5/po/sv.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-07-31 20:34+0200\n"
 "PO-Revision-Date: 2006-05-14 16:18+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
@@ -156,12 +156,13 @@ msgstr "B< >E<lt>lång beskrivningE<gt>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-control.5:50
+#, fuzzy
 msgid ""
 "The format for the package description is a short brief summary on the first "
-"line (after the \"Description\" field). The following lines can be used as a "
-"longer, more detailed description. Each line of the long description must be "
-"preceded by a space, and blank lines in the long description must contain a "
-"single '.' following the preceding space."
+"line (after the \"Description\" field). The following lines should be used "
+"as a longer, more detailed description. Each line of the long description "
+"must be preceded by a space, and blank lines in the long description must "
+"contain a single '.' following the preceding space."
 msgstr ""
 "Formatet för paketbeskrivningen är en kortfattad sammanfattning på den "
 "första raden (efter \"Description\"-fältet). Följande rader kan användas som "
@@ -210,11 +211,12 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-control.5:71
+#, fuzzy
 msgid ""
 "In Debian, the B<Section> and B<Priority> fields have a defined set of "
 "accepted values based on the Policy Manual.  They are used to decide how the "
-"packages are layed out in the archive.  A list of these can be obtained from "
-"the latest version of B<debian-policy> package."
+"packages are layed out in the archive.  A list of these values can be "
+"obtained from the latest version of the B<debian-policy> package."
 msgstr ""
 "I Debian har fälten B<Section> och B<Priority> fördefinierade accepterade "
 "värden baserade på policymanualen, vilka används för att bestämma hur "
@@ -249,11 +251,12 @@ msgstr "B<Architecture:> E<lt>arkitektur|allE<gt>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-control.5:86
+#, fuzzy
 msgid ""
 "The architecture specifies which type of hardware this package was compiled "
 "for. Common architectures are `i386', `m68k', `sparc', `alpha', `powerpc' "
 "etc. Note that the B<all> option is meant for packages that are architecture "
-"independent. Some examples of this are shell or Perl scripts, or "
+"independent. Some examples of this are shell and Perl scripts, and "
 "documentation."
 msgstr ""
 "Arkitekturen anger vilken sorts maskinvara paketet kompilerades för. Vanliga "
@@ -353,13 +356,14 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/deb-control.5:131
+#, fuzzy
 msgid ""
 "The syntax of B<Depends>, B<Pre-Depends>, B<Recommends> and B<Suggests> "
 "fields is a list of groups of alternative packages. Each group is a list of "
 "packages separated by vertical bar (or `pipe') symbols, `|'. The groups are "
 "separated by commas. Commas are to be read as `AND', and pipes as `OR', with "
-"pipes binding more tightly. Each item is a package name optionally followed "
-"by a version number specification in parentheses."
+"pipes binding more tightly. Each package name is optionally followed by a "
+"version number specification in parentheses."
 msgstr ""
 "Syntaxen för B<Depends>, B<Pre-Depends>, B<Recommends> och B<Suggests>-"
 "fälten är en lista över grupper av alternativa paket. Varje grupp innehåller "
