--- a/man/po4a/dpkg.1/po/fr.po
+++ b/man/po4a/dpkg.1/po/fr.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-06-20 21:06+0200\n"
+"POT-Creation-Date: 2006-08-02 22:21+0200\n"
 "PO-Revision-Date: 2006-05-14 11:25+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -95,13 +95,14 @@ msgstr "DESCRIPTION"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:26
+#, fuzzy
 msgid ""
 "B<dpkg> is a tool to install, build, remove and manage Debian packages. The "
 "primary and more user-friendly front-end for B<dpkg> is B<dselect>(1). "
 "B<dpkg> itself is controlled entirely via command line parameters, which "
 "consist of exactly one action and zero or more options. The action-parameter "
-"tells dpkg what to do and options control the behavior of the action in some "
-"way."
+"tells B<dpkg> what to do and options control the behavior of the action in "
+"some way."
 msgstr ""
 "B<dpkg> est un outil pour l'installation, la création, la suppression et la "
 "gestion des paquets Debian. B<Dselect>(1) est la principale interface à "
@@ -113,8 +114,9 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:31
+#, fuzzy
 msgid ""
-"B<dpkg> can be also be used as a front-end to B<dpkg-deb>.  The following "
+"B<dpkg> can be also be used as a front-end to B<dpkg-deb>(1).  The following "
 "are B<dpkg-deb> actions, and if they are encountered, B<dpkg> just runs "
 "B<dpkg-deb> with the parameters given to it:"
 msgstr ""
@@ -673,7 +675,9 @@ msgstr "B<dpkg --print-architecture>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:219
-msgid "Print architecture of packages dpkg installs (for example, \"i386\")."
+#, fuzzy
+msgid ""
+"Print architecture of packages B<dpkg> installs (for example, \"i386\")."
 msgstr ""
 "Affiche l'architecture des paquets installés (par exemple, «\\ i386\\ »)."
 
@@ -782,8 +786,8 @@ msgstr "Affiche la version de B<dpkg>."
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:250
-#, no-wrap
-msgid "B<dpkg-deb-actions>"
+#, fuzzy, no-wrap
+msgid "B<dpkg-deb actions>"
 msgstr "B<dpkg-deb-actions>"
 
 # type: Plain text
@@ -835,8 +839,8 @@ msgstr ""
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg.1:275
-#, no-wrap
-msgid "B<dpkg-query-actions>"
+#, fuzzy, no-wrap
+msgid "B<dpkg-query actions>"
 msgstr "B<dpkg-query-actions>"
 
 # type: Plain text
@@ -901,7 +905,8 @@ msgstr "B<--abort-after=>I<nombre>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:302
-msgid "Change after how many errors dpkg will abort. The default is 50."
+#, fuzzy
+msgid "Change after how many errors B<dpkg> will abort. The default is 50."
 msgstr ""
 "Modifie le nombre d'erreurs au delà duquel dpkg s'arrête. il est par défaut "
 "égal à 50."
@@ -932,8 +937,9 @@ msgstr "B<-D>I<octal>B< | --debug=>I<octal>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:314
+#, fuzzy
 msgid ""
-"Set debugging on. I<octal> is formed by bitwise-orring desired values "
+"Switch debugging on. I<octal> is formed by bitwise-orring desired values "
 "together from the list below (note that these values may change in future "
 "releases). B<-Dh> or B<--debug=help> display these debugging values."
 msgstr ""
@@ -1007,7 +1013,8 @@ msgstr ""
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:340
-msgid "B<all>: Turns on(or off) all force options."
+#, fuzzy
+msgid "B<all>: Turns on (or off) all force options."
 msgstr "B<all>\\ : Met en oeuvre (ou pas) toutes les options de forçage."
 
 # type: Plain text
@@ -1287,9 +1294,10 @@ msgstr "B<-G>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:452
+#, fuzzy
 msgid ""
 "Don't install a package if a newer version of the same package is already "
-"installed. This is an alias of B<--refuse-downgrade.>"
+"installed. This is an alias of B<--refuse-downgrade>."
 msgstr ""
 "Ne pas installer un paquet si une version plus récente de ce paquet est déjà "
 "installée. C'est un alias pour B<--refuse-downgrade.>."
@@ -1302,12 +1310,13 @@ msgstr "B<--root=>I<rep> | B<--admindir=>I<rep> | B<--instdir=>I<rep>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:463
+#, fuzzy
 msgid ""
 "Change default directories. B<admindir> defaults to I</var/lib/dpkg> and "
 "contains many files that give information about status of installed or "
 "uninstalled packages, etc. B<instdir> defaults to I</> and refers to the "
 "directory where packages are to be installed. B<instdir> is also the "
-"directory passed to B<chroot>(2) before running I<package>'s installation "
+"directory passed to B<chroot>(2) before running package's installation "
 "scripts, which means that the scripts see B<instdir> as a root directory.  "
 "Changing B<root> changes B<instdir> to I<dir> and B<admindir> to I<dir>B</"
 "var/lib/dpkg>."
@@ -1362,13 +1371,14 @@ msgstr "B<--status-fd >I<E<lt>nE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:480
+#, fuzzy
 msgid ""
 "Send package status info to file descriptor I<E<lt>nE<gt>>. This can be "
 "given multiple times. Status updates are of the form `status: E<lt>pkgE<gt>: "
-"E<lt>pkg qstateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: "
-"error: extend-error-message'.  Configuration file conflicts are reported as "
+"E<lt>pkg stateE<gt>'.  Errors are reported as `status: E<lt>pkgE<gt>: error: "
+"extend-error-message'.  Configuration file conflicts are reported as "
 "`status: conffile-prompt: conffile : 'current-conffile' 'new-conffile' "
-"useredited distedited'"
+"useredited distedited'."
 msgstr ""
 "Cette action envoie des informations sur l'état d'un paquet au descripteur "
 "de fichier I<E<lt>nE<gt>>. On peut répéter l'opération plusieurs fois. La "
@@ -1386,6 +1396,7 @@ msgstr "B<--log=>I<fichier>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:492
+#, fuzzy
 msgid ""
 "Log status change updates and actions to I<filename>, instead of the default "
 "I</var/log/dpkg.log>. If this option is given multiple times, the last "
@@ -1395,7 +1406,7 @@ msgid ""
 "versionE<gt> E<lt>available-versionE<gt>' for actions where "
 "I<E<lt>actionE<gt>> is one of install, upgrade, remove, purge; and `YYYY-MM-"
 "DD HH:MM:SS conffile E<lt>filenameE<gt> E<lt>decisionE<gt>' for conffile "
-"changes where I<E<lt>decision> is either install or keep."
+"changes where I<E<lt>decisionE<gt>> is either install or keep."
 msgstr ""
 "Enregistre la modification de l'état, la mise à jour ou l'action sur "
 "I<fichier> au lieu de l'habituel I</var/log/dpkg.log>. Peut être répété. Les "
@@ -1564,7 +1575,8 @@ msgstr "B<SHELL>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:540
-msgid "The program B<dpkg> will execute while starting a new shell."
+#, fuzzy
+msgid "The program B<dpkg> will execute when starting a new shell."
 msgstr ""
 "Le programme qu'exécute B<dpkg> quand il lance un nouvel interpréteur de "
 "commandes."
@@ -1592,7 +1604,8 @@ msgstr "EXEMPLES"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:547
-msgid "To list packages related to the editor vi:"
+#, fuzzy
+msgid "To list packages related to the editor B<vi>(1):"
 msgstr "Pour afficher les paquets dont le nom contient la chaîne 'vi' :"
 
 # type: Plain text
@@ -1603,7 +1616,8 @@ msgstr "    B<dpkg -l \\(aq*vi*\\(aq>\n"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.1:552
-msgid "To see the entries in I</var/lib/dpkg/available> on two packages:"
+#, fuzzy
+msgid "To see the entries in I</var/lib/dpkg/available> of two packages:"
 msgstr ""
 "Pour voir les entrées de I</var/lib/dpkg/available> concernant deux paquets"
 "\\ :"
@@ -1758,10 +1772,10 @@ msgstr "AUTEURS"
 #: ../../../man/po4a/../C/dpkg.1:616
 #, no-wrap
 msgid ""
-"See I</usr/share/doc/dpkg/THANKS.gz> for the list of people who have\n"
-"contributed to B<dpkg> .\n"
+"See I</usr/share/doc/dpkg/THANKS> for the list of people who have\n"
+"contributed to B<dpkg>.\n"
 msgstr ""
-"Voyez le fichier I</usr/share/doc/dpkg/THANKS.gz> pour la \n"
+"Voyez le fichier I</usr/share/doc/dpkg/THANKS> pour la \n"
 "liste des personnes qui ont contribué à B<dpkg>.\n"
 
 # type: TP
