--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-05  Sven Joachim <sven_joachim@web.de>
+
+	* de.po: Updated to 916t.
+
 2006-07-28  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Wodring improvements
